--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "extract-text-webpack-plugin",
-  "version": "3.0.2",
+  "name": "@calebmer/extract-text-webpack-plugin",
+  "version": "4.0.0",
   "author": "Tobias Koppers @sokra",
   "description": "Extract text from bundle into a file.",
   "license": "MIT",
